# McShooty

./: .gitignore  AndroidAssetManager.cpp  AndroidAssetManager.h  Asset.cpp  Asset.h  CMakeLists.txt  Camera.cpp  IAssetManager.h  IInputSystem.h  IOpenGLContext.h  IPlatform.h  LinuxInputSystem.cpp  LinuxInputSystem.h  LinuxPlatform.cpp  LinuxPlatform.h  Mesh.h  MeshLoaderSystem.cpp  MeshLoaderSystem.h  OpenGLAPI.cpp  OpenGLAPI.h  OpenGLESContext.cpp  OpenGLESContext.h  OpenGLRenderSystem.cpp  OpenGLRenderSystem.h  OpenXrApi.cpp  OpenXrApi.h  RenderedObject.h  Shader.cpp  Shader.h  SteamVrApi.cpp  SteamVrApi.h  Transform.h  TransformSystem.cpp  TransformSystem.h  UnlitColorRenderer.h  WinOpenGLContext.cpp  WinOpenGLContext.h  WindowsAssetManager.cpp  WindowsAssetManager.h  WindowsInputSystem.cpp  (+4 more)
Assets/Models/: cubeHand.mtl
Assets/Shaders/GLSL/: fragment-rainbow.glsl  vertex-rainbow.glsl
MeshExporter/: CMakeLists.txt  main.cpp
